# football-auto-broadcast

./: CMakeLists.txt  LICENSE  README.md  rename_suffix.bat
src/common/: common.cpp  common.h
src/detection/: detection.h.txt
src/editor/: editor.h.txt
src/face_capture/: face_capture.h
src/ui/: ui.h.txt
src/video_stream/: video_stream.h
